<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:background="@drawable/loginpage">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
        tools:ignore="MissingConstraints">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="25dp"
            android:text="SIGN UP"
            android:textColor="#3549B8"
            android:textSize="30sp"
            android:textStyle="bold"

            />

        <EditText
            android:id="@+id/sname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="#3549B8"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/semail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="#3549B8"
            android:ems="10"
            android:hint="@string/emailid"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/spassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="#3549B8"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="HardcodedText,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/sconformpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="#3549B8"
            android:ems="10"
            android:hint="@string/conformpassword"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />

        <RadioGroup
            android:id="@+id/rgb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male"
                tools:ignore="UsingOnClickInXml,VisualLintButtonSize" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female"
                tools:ignore="UsingOnClickInXml,VisualLintButtonSize" />

        </RadioGroup>

        <Button
            android:id="@+id/signup12"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#3549B8"
            android:text="Sign up"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/ilogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/already_have_an_account_sign_in"
            android:textSize="15sp"
            android:textStyle="italic" />

    </LinearLayout>
    </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>