<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/mainLayout"
    android:background="@drawable/loginpage">


    <Button
        android:id="@+id/skip12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:minHeight="32dp"
        android:text="skip"
        android:textColor="@android:color/white" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="60dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LOGIN"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#3549B8"
            android:paddingBottom="25dp"
            />


        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="#3549B8"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="#3549B8"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/button2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:backgroundTint="#3549B8"
            />

            <TextView
                android:id="@+id/isignup"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/not_yet_registered_sign_up_now"
                android:textSize="15sp"
                android:textStyle="italic"
                />










    </LinearLayout>
    </ScrollView>
    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>